--- a/page.html
+++ b/page.html
@@ -10,7 +10,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.28/vue.min.js"></script>
-    <title>Teste Qualquer Coisa</title>
+    <title>Qualquer Coisa</title>
 </head>
 <body>
     <div id="vApp" class="container">
